exports[`generateLinkedList should generate linked list from values 2 1`] = `
{
  "next": {
    "next": {
      "next": {
        "next": null,
        "value": null,
      },
      "value": "c",
    },
    "value": "b",
  },
  "value": "a",
}
`;

exports[`generateLinkedList should handle null values in array 1`] = `
{
  "next": {
    "next": {
      "next": {
        "next": null,
        "value": null,
      },
      "value": 3,
    },
    "value": null,
  },
  "value": 1,
}
`;
